fix(richtext-lexical): z-index issues (#4570)

--- a/packages/richtext-lexical/src/field/lexical/LexicalEditor.scss
+++ b/packages/richtext-lexical/src/field/lexical/LexicalEditor.scss
@@ -3,7 +3,6 @@
 .rich-text-lexical {
   .editor {
     position: relative;
-    z-index: 1;
   }
 
   .editor-shell {
